fix overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@
   font-style: normal;
 }
 
+html{
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   font-family:'spotify-bold';
